<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Home Monitor</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_doNothing">Do Nothing</string>
    <string name="action_refresh">Refresh</string>
    <string name="hint_text">Hint Text</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="pref_title">APreference</string>
    <string name="pref_desc">This Is a checkbox preference</string>
    <string name="preference_title">App Preferences</string>
    <string name="preference_title1">More App Preferences</string>
    <string name="preference_title2">Even More App Preferences</string>
    <string name="networkop_dialog">Network Operation</string>
    <string name="networkop_dialog_cancel">Cancel</string>


    <string name="key_edittextpref">EditTextPref</string>
    <string name="key_IPString">IPString</string>
    <string name="key_IPString_default">192.168.0.5</string>

    <string name="key_PortString">PortString</string>
    <string name="preference_network_title">Network Settings</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_light_tweak">LightTweak</string>
    <string name="title_activity_top_level">TopLevel</string>

    <string name="title_section1">Lighting Power Levels</string>
    <string name="title_section2">Fade Rate Levels</string>
    <string name="title_section3">Timed Event</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>


</resources>
