<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/preference_title"
        android:key="This_key_is_the_reference_to_this_preference">
        <CheckBoxPreference
         android:key="key_apreference"
          android:title="@string/pref_title"
         android:summary="@string/pref_desc"
         android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preference_title1"
        android:key="ThisPreferenceTitlteKey">
        <CheckBoxPreference
            android:key="key_anotherpreference"
            android:title="@string/pref_title"
            android:summary="@string/pref_desc"
            android:defaultValue="true" />
        <EditTextPreference
            android:key="@string/key_edittextpref"
            android:title="@string/pref_title"
            android:summary="@string/pref_desc"
            android:defaultValue="Some Text To Edit"
            android:inputType="text"
            android:singleLine="true"
            />
    </PreferenceCategory>
</PreferenceScreen>